Repo linked and cloned, favicon added.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Midterm Project</title>
+  <title>Midterm Project | Nishad Patne</title>
+  <link rel="icon" href="https://img.icons8.com/doodle/48/internet--v1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/doodle/48/internet--v1.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css?v=1.0">
 
 </head>
