--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 
   <title>Midterm Project | Nishad Patne</title>
   <link rel="icon" href="https://img.icons8.com/doodle/48/internet--v1.png" type="image/x-icon">
-  <link rel="shortcut icon" href="https://img.icons8.com/doodle/48/internet--v1.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css?v=1.0">
 
 </head>
 <!-- Body -->
 <body>
   <section class="main">
-    <h1>Atomic Design Reverse Engineering</h1>
+    <h1>Atomic Design Reverse Engineering - <a href="https://kynect.ky.gov/benefits/s/?language=en_US">Kynect Benifits</a></h1>
     <p>Found Elements:</p>
     <ul>
       <li><a href="atoms/index.html">Atoms</a></li>
