--- a/organisms/index.html
+++ b/organisms/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="icon" href="https://img.icons8.com/doodle/48/internet--v1.png" type="image/x-icon">
   <title>Midterm Project - Organisms</title>
   <link rel="stylesheet" href="../css/style.css?v=1.0">
 
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="example-1.html">Example 1</a></li>
       <li><a href="example-2.html">Example 2</a></li>
-      <li><a href="example-2.html">Example 3</a></li>
+      <li><a href="example-3.html">Example 3</a></li>
     </ul>
   </section>
 </body>
