--- a/atoms/example-2.html
+++ b/atoms/example-2.html
@@ -5,20 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Midterm Project - Atoms/E1</title>
+  <title>Midterm Project - Atoms/E2</title>
   <link rel="stylesheet" href="../css/style.css?v=1.0">
 
 </head>
 <!-- Body -->
 <body>
   <section class="main">
-    <h1>Example 1</h1>
+    <h1>Example 2</h1>
     <p><a href="index.html">All Atoms</a></p>
     <div>
-      <h2>Button</h2>
-      <img src="../images/at-1.png" alt="">
+      <h2>Hyperlinks</h2>
+      <img src="../images/at-2.png" alt="">
       <p class="description">
-        This is a simple button that is used as an atom to create different molecules as well as as even different complex atoms. There are 4-5 variants of the same button coming in different colors and sizes.
+        This is an example of a hyperlink. These links are used to navigate user through this webpage, website or even beyond this website as needed. These links too have 4-5 variants, varying in colors and font sizes signifying different uses.
       </p>
     </div>
   </section>
