CSS Style Guide

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <!-- Body -->
 <body>
   <section class="main">
-    <h1>Atomic Design Reverse Engineering - <a href="https://kynect.ky.gov/benefits/s/?language=en_US">Kynect Benifits</a></h1>
+    <h1>Atomic Design Reverse Engineering - <a href="https://kynect.ky.gov/benefits/s/?language=en_US">Kynect Benefits</a></h1>
     <p>Found Elements:</p>
     <ul>
       <li><a href="atoms/index.html">Atoms</a></li>
       <li><a href="molecules/index.html">Molecules</a></li>
       <li><a href="organisms/index.html">Organisms</a></li>
     </ul>
+
+    <p>Way to the CSS Style Guide :-> <a href="subpages/index.html">click here</a>.</p>
   </section>
 </body>
 </html>
