personalized style guide

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <li><a href="organisms/index.html">Organisms</a></li>
     </ul>
 
-    <p>Way to the CSS Style Guide :-> <a href="subpages/index.html">click here</a>.</p>
+    <p>Way to the CSS Style Guide :-> <a href="subpages/styleguide.html">click here</a>.</p>
+    <p>Way to the Personalized CSS Style Guide :-> <a href="subpages/personalizedStyleguide.html">click here</a>.</p>
   </section>
 </body>
 </html>
