--- a/subpages/styleguide.html
+++ b/subpages/styleguide.html
@@ -17,7 +17,7 @@
   <body>
     <section class="main">
       <h1>CSS Style Guide</h1>
-
+      <p class="mt-4">Return to <a href="../index.html">Home</a></p>
       <article class="container">
         <h2>Atoms</h2>
         <p class="titleText_font-18">Title</p>
@@ -30,6 +30,11 @@
 
         <input type="checkbox" name="check" class="input_checkbox" />
         <br />
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="icon" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+          <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+        </svg>
+        <br>
         <button class="btn-primary">Btn Primary</button>
         <button class="btn-secondary">Btn Secondary</button>
       </article>
@@ -91,7 +96,10 @@
 
           <div class="btn-container">
             <button class="btn-secondary">Cancel</button>
-            <button class="btn-primary">Submit</button>
+            <button class="btn-primary">Log In<svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="icon ml-2" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+              <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+            </svg></button>
           </div>
         </div>
       </article>
