Added Mid-Term Project

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <p>Way to the CSS Style Guide :-> <a href="subpages/styleguide.html">click here</a>.</p>
     <p>Way to the Personalized CSS Style Guide :-> <a href="subpages/personalizedStyleguide.html">click here</a>.</p>
+    <p>Way to the Mid-Term Project :-> <a href="subpages/midTermProject.html">click here</a>.</p>
   </section>
 </body>
 </html>
